# inthebeginning

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  RELEASE_HISTORY.md  WORKLOG.md  generate_ast_captures.py  markdown_sweep_tracker.json  package-lock.json  package.json  pytest.ini  run_demo.py  start_album_player.sh  start_radio.sh
.claude/: settings.json  steering-check.sh
.claude/hooks/: journal-capture.sh  lint-on-write.sh  post-bash-test-nudge.sh  pre-commit-plan-check.sh  session-start.sh  stop-check.sh  validate-journal.py
.github/workflows/: apple.yml  ci.yml  golden.yml  release.yml
apps/: inthebeginning-bounce
apps/audio/: README.md  compare_v8_v15.py  compare_v8_v15_full.py  composer.py  extract_midi_provenance.py  generate.py  generate_full_notes.py  generate_v17_mp3s.py  generate_v18_mp3s.py  generate_v8_album.py  music_engine.py  radio_engine.py  sample_gen.py  spectral_compare.py  test_audio.py  test_composer.py  test_music_engine.py  test_radio_engine.py
apps/c/: Doxyfile  Makefile  README.md  test_simulator.c
apps/cosmic-runner/: README.md  build.py  index.html
apps/cosmic-runner-v2/: README.md  build.py
apps/cosmic-runner-v3/: DEPLOY.md  README.md  build.py  index.html
apps/cosmic-runner-v5/: README.md  index.html
apps/cpp/: CMakeLists.txt  Doxyfile  README.md  test_simulator.cpp
apps/cpp/simulator/: atomic.cpp  atomic.hpp  biology.cpp  biology.hpp  chemistry.cpp  chemistry.hpp  constants.hpp  environment.cpp  environment.hpp  main.cpp  quantum.cpp  quantum.hpp  universe.cpp  universe.hpp
apps/go/: README.md  go.mod
apps/java/: README.md  build.gradle
apps/kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/nodejs/: README.md  atomic.js  biology.js  chemistry.js  constants.js  environment.js  index.js  package.json  quantum.js  universe.js
apps/perl/: README.md  simulate.pl
apps/php/: README.md  server.php  simulate.php
apps/rust/: Cargo.toml  README.md
apps/rust/src/: main.rs
apps/rust/src/simulator/: atomic.rs  biology.rs  chemistry.rs  constants.rs  environment.rs  mod.rs  quantum.rs  universe.rs
apps/screensaver-macos/: Makefile  README.md
apps/screensaver-ubuntu/: Makefile  README.md  inthebeginning-screensaver.c  inthebeginning.desktop  test_simulator.c
apps/swift/: Info.plist  Package.swift  README.md
apps/typescript/: README.md  package.json  tsconfig.browser.json  tsconfig.json
apps/visualizer/: README.md  build.py  index.html  version.json
apps/wasm/: Cargo.toml  README.md  build.sh  index.html
apps/wasm-synth/: Cargo.toml  README.md
apps/wasm-synth/src/: lib.rs  sf2.rs
apps/wasm/src/: atomic.rs  biology.rs  chemistry.rs  constants.rs  environment.rs  introspect.rs  lib.rs  quantum.rs  renderer.rs  universe.rs
apps/wasm/src/shaders/: particle.wgsl
ast_captures/: compact_ast.txt  coverage.json  coverage_map.json  demo_output.txt  introspection_report.json  session_log.json  simulation_results.json  symbols.json
ast_dsl/: __init__.py  c_ast.py  core.py  go_ast.go  introspect.py  java_ast.py  kotlin_ast.py  node_ast.js  perl_ast.py  php_ast.py  python_ast.py  reactive.py  rust_ast.py  swift_ast.py  typescript_ast.py  wasm_ast.py
docs/: android_play_store_guide.md  apps_overview.md  ast_introspection.md  ast_passing_efficiency.md  build_guide.md  cpp_ast.md  go_ast.md  ios_app_store_guide.md  java_ast.md  kotlin_ast.md  music_algorithm.md  nodejs_ast.md  perl_ast.md  php_ast.md  port_tracking.md  python_ast.md  roadmap.md  rust_ast.md  steering.md  swift_ast.md  typescript_ast.md  v8_v15_comparison.md  v8_v15_results.md  walkthrough.md  wasm_ast.md  web-ios-flow.md
future_memories/: README.md  v0.10.0-plan.md  v0.9.0-plan.md  v11-plan.md  v12-plan.md  v13-plan.md  v14-plan.md  v15-v16-plan.md  v17-comparison-plan.md  v19-test-infrastructure-plan.md  v20-audio-overhaul-plan.md  v21-docs-json-transcript-plan.md  v22-wasm-game-plan.md  v23-cosmic-runner-v8-album-plan.md  v24-github-pages-midi-plan.md  v25-synthesizer-port-plan.md  v26-soundfont-web-audio-plan.md  v27-deploy-shared-assets-plan.md  v28-game-overhaul-plan.md  v29-v7-deploy-python-port-plan.md  v30-wasm-audio-mode-plan.md  v31-plan.md  v32-plan.md  v33-plan.md  v34-plan.md  v35-plan.md  v36-plan.md  v37-plan.md  v39-plan.md  v40-plan.md  v41-plan.md  v43-plan.md  v44-plan.md  v45-plan.md  v47-plan.md  v48-plan.md  v5-deploy-fix-plan.md
session_logs/: journal_schema.json  transcript_schema.json  v0.10.0-session.md  v0.11.0-session.md  v0.12.0-session.md  v0.13.0-session.md  v0.14.0-session.md  v0.17.0-session.md  v0.2.0-session.md  v0.3.0-session.md  v0.4.0-session.md  v0.6.0-session.md  v0.7.0-session.md  v0.8.0-session.md  v0.9.0-session.md  v19-session.md  v21-session.json  v21-session.md  v23-session.md  v26-session.md  v27-session.md  v28-session.md  v29-session.md  v30-session.md  v31-session.json  v31-session.md  v31-visual-report.md  v37-journal.json  v37-session.md  v38-journal.json  v38-session.md  v39-journal.json  v39-session.md  v40-journal.json  v40-session.md  v41-journal.json  v41-session.md  v42-journal.json  v42-session.md  v43-journal.json  (+10 more)
simulator/: __init__.py  atomic.py  biology.py  chemistry.py  constants.py  environment.py  quantum.py  terminal_ui.py  universe.py
test_screenshots/: audio-analysis-report.json  v45-test-report.md  wasm-comparison-report.json
test_screenshots/v48/: audio-comparison-report.json
tests/: conftest.py  test_ast_dsl.py  test_atomic.py  test_audio_golden.py  test_biology.py  test_chemistry.py  test_cosmic_runner_v2.py  test_cosmic_runner_v3.py  test_cross_language_parity.py  test_deploy_app_flows.py  test_deploy_assets.py  test_e2e_browser.py  test_environment.py  test_golden_outputs.py  test_language_asts.py  test_midi_catalog.py  test_note_data_completeness.py  test_note_visual_validation.py  test_quantum.py  test_screen_capture.py  test_server_smoke.py  test_terminal_ui.py  test_universe.py  test_visualizer_golden.py  test_web_game.mjs
tools/: audio-sink.sh  capture_golden.py  generate_midi_catalog.py  quick-test.sh
(+454 files in other folders)
