[package]
name = "inthebeginning-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly + WebGPU simulation of the universe from Big Bang to life"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.91"
getrandom = { version = "0.2", features = ["js"] }
wgpu = { version = "28.0", features = ["webgpu"] }
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
rand = { version = "0.8", features = ["small_rng"] }

[dependencies.web-sys]
version = "0.3.91"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Performance",
    "console",
]

[profile.release]
opt-level = "s"
lto = true
